--- a/components/header.module.scss
+++ b/components/header.module.scss
@@ -1,12 +1,16 @@
+$mobile-breakpoint: 767px;
+
 .header {
     background-color: var(--primary-color);
     display: grid;
+    grid-template-columns: max-content 1fr auto;
     grid-template-areas: 'headshot title nav';
     justify-content: space-between;
     align-items: center;
     padding: 20px 5%;
 
-    @media (max-width: 767px) {
+    @media (max-width: $mobile-breakpoint) {
+        grid-template-columns: 1fr;
         grid-template-areas: 'headshot' 'title' 'nav';
     }
 }
@@ -19,19 +23,28 @@
     letter-spacing: -0.05rem;
     margin: 1rem 0;
     color: white;
+    text-align: center;
 
     a {
         color: inherit;
     }
 }
 
-.borderCircle {
+.headShot {
     grid-area: headshot;
-    border-radius: 9999px;
-    padding: 5px !important;
-    border: 3px solid white !important;
+    margin: 0 auto;
+
+    .borderCircle {
+        border-radius: 9999px;
+        padding: 5px !important;
+        border: 3px solid white !important;
+    }
 }
 
 .nav {
     grid-area: nav;
+
+    @media (max-width: $mobile-breakpoint) {
+        text-align: center;
+    }
 }
